--- a/index.css
+++ b/index.css
@@ -12,3 +12,9 @@ h3{color: grey;}
 .rcorners { 
 border-radius: 25px;
 }
+div {
+	padding-top: 20px;
+	padding-bottom: 20px;
+	padding-right: 20px
+	padding-left: 20px;
+}
