--- a/index.css
+++ b/index.css
@@ -1,14 +1,20 @@
+body {
+	font-family: 'Montserrat', sans-serif;
+}
 h1 {
 	font-size: 50px;
 	margin: 5px;
+	
 }
 img {
 	margin: 5px;
 	padding: 10px;
 }
 h1{color: grey ;}
-h2{color: grey;}
-h3{color: grey;}
+h2{color: grey;
+}
+h3{color: grey;
+}
 .rcorners { 
 border-radius: 25px;
 }
