--- a/index.css
+++ b/index.css
@@ -1,29 +1,42 @@
-body {
-	font-family: 'Montserrat', sans-serif;
-}
-h1 {
-	font-size: 50px;
-	margin: 5px;
+	body {
+		font-family: 'Montserrat', sans-serif;
+
+		padding-top: 20px;
+		padding-bottom: 20px;
+		padding-right: 20px
+		padding-left: 20px;
+	}
 	
-}
-img {
-	margin: 5px;
-	padding: 10px;
-}
-h1{color: grey ;}
-h2{color: grey;
-}
-h3{color: grey;
-}
-.rcorners { 
-border-radius: 25px;
-}
-div {
-	padding-top: 20px;
-	padding-bottom: 20px;
-	padding-right: 20px
-	padding-left: 20px;
-}
-h4 {
-	color: grey;
-}
+	h1 {
+		font-size: 50px;
+		margin: 5px;	
+	}
+
+	img {
+		margin: 5px;
+		padding: 10px;
+	}
+	
+	h1 {
+		color: grey;
+	}
+
+	h2 {
+		color: grey;
+	}
+
+	h3 {
+		color: grey;
+	}
+
+	.rcorners { 
+		border-radius: 25px;
+	}
+
+ 
+	h4 {
+		color: grey;
+	}
+	#main-menu {
+		padding: 20px;
+	}
